# analysis_bias_pt_sports_newspapers

./: README.rst  pyproject.toml
analysis_bias_pt_sports_newspapers/: analysis.py  categorical_yearplot.py  covers_dataset.py  crawl_covers.py  utils.py
analysis_bias_pt_sports_newspapers/data/: games_data.csv
analysis_bias_pt_sports_newspapers/data/labels/: Abola_2019-01-01.xml  Abola_2019-01-02.xml  Abola_2019-01-03.xml  Abola_2019-01-04.xml  Abola_2019-01-05.xml  Abola_2019-01-06.xml  Abola_2019-01-07.xml  Abola_2019-01-08.xml  Abola_2019-01-09.xml  Abola_2019-01-10.xml  Abola_2019-01-11.xml  Abola_2019-01-12.xml  Abola_2019-01-13.xml  Abola_2019-01-14.xml  Abola_2019-01-15.xml  Abola_2019-01-16.xml  Abola_2019-01-17.xml  Abola_2019-01-18.xml  Abola_2019-01-19.xml  Abola_2019-01-20.xml  Abola_2019-01-21.xml  Abola_2019-01-22.xml  Abola_2019-01-23.xml  Abola_2019-01-24.xml  Abola_2019-01-25.xml  Abola_2019-01-26.xml  Abola_2019-01-27.xml  Abola_2019-01-28.xml  Abola_2019-01-29.xml  Abola_2019-01-30.xml  Abola_2019-01-31.xml  Abola_2019-02-01.xml  Abola_2019-02-02.xml  Abola_2019-02-03.xml  Abola_2019-02-04.xml  Abola_2019-02-05.xml  Abola_2019-02-06.xml  Abola_2019-02-07.xml  Abola_2019-02-08.xml  Abola_2019-02-09.xml  (+1054 more)
