[tool.poetry]
name = "analysis_bias_pt_sports_newspapers"
version = "0.1.0"
description = ""
authors = ["Rui Silva"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
matplotlib = "^3.1"
pandas = "^0.25.3"
requests = "^2.22"
bs4 = "^0.0.1"
Pillow = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
